lintian-brush (0.30) UNRELEASED; urgency=medium

  * Show tree status when there are pending changes and --verbose is on.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sun, 22 Sep 2019 23:42:46 +0000

lintian-brush (0.29) unstable; urgency=medium

  * Fix support for newer versions of Breezy.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 21 Sep 2019 20:28:15 +0000

lintian-brush (0.28) unstable; urgency=medium

  * Add fixer for obsolete-runtime-tests-restriction.
  * Add fixer for debian-changelog-has-wrong-day-of-week.
  * Seperately report when fixers can't preserve formatting.
  * field-name-typo-in-dep5-copyright: Fix preservation of fields when
    the only change is in the case.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Mon, 02 Sep 2019 02:34:58 +0000

lintian-brush (0.27) unstable; urgency=medium

  * Add fixer for package-contains-linda-overrides.
  * Add fixer for excessive-priority-for-library-package.
  * Add fixer for debian-rules-sets-dpkg-architecture-variable.
  * Add fixers for missing-built-using-field-for-golang-package and
    built-using-field-on-arch-all-package.
  * Add fixer for debian-control-has-unusual-field-spacing.
  * Support running in packages that are not at the repository root.
  * Print an error message if a fixer could not be found. Closes:
    #939131
  * Update standards version, no changes needed.
  * Set debhelper-compat version in Build-Depends.
  * Don't create upstream metadata files for native packages.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sun, 01 Sep 2019 22:44:21 +0000

lintian-brush (0.26) unstable; urgency=medium

  * quilt-series-but-no-build-dep: only add quilt dependency if one does
    not yet exist.
  * vcs-field-bitrotted: do not add duplicate -b arguments.
  * Ignore empty watch files, rather than printing an error.
  * configure parser: Ignore invalid encoding characters in lines that
    are ignored anyway.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sun, 25 Aug 2019 22:13:26 +0000
