@@ -134,6 +134,36 @@ Testsuite: autopkgtest
 
 """, 'debian/control')
 
+    def test_update_template(self):
+        self.build_tree_contents([('debian/', ), ('debian/control', """\
+# DO NOT EDIT
+# This file was generated by blah
+
+Source: blah
+Testsuite: autopkgtest
+Uploaders: Jelmer Vernooij <jelmer@jelmer.uk>
+
+"""), ('debian/control.in', """\
+Source: blah
+Testsuite: autopkgtest
+Uploaders: @lintian-brush-test@
+
+""")])
+
+        def source_cb(c):
+            c['Source'] = 'blah1'
+        update_control(source_package_cb=source_cb)
+        self.assertFileEqual("""\
+Source: blah1
+Testsuite: autopkgtest
+Uploaders: testvalue
+""", "debian/control")
+        self.assertFileEqual("""\
+Source: blah1
+Testsuite: autopkgtest
+Uploaders: @lintian-brush-test@
+""", "debian/control.in")
+
 
 class ParseRelationsTests(TestCase):
 
