@@ -1,6 +1,9 @@
 lintian-brush (0.30) UNRELEASED; urgency=medium
 
   * Show tree status when there are pending changes and --verbose is on.
+  * Don't complain about generated files unless there is a change that
+    can be made to a file.
+  * Support updating generated GNOME control files.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Sun, 22 Sep 2019 23:42:46 +0000
 
